[gd_scene load_steps=5 format=3 uid="uid://uuobttuthxms"]

[ext_resource type="Script" path="res://Langdocs/prog_93a.gd" id="1_lov5v"]
[ext_resource type="Theme" uid="uid://2sh8kniwmbuq" path="res://Big_Font.tres" id="2_5drw4"]

[sub_resource type="LabelSettings" id="LabelSettings_fq6xj"]
font_size = 38

[sub_resource type="LabelSettings" id="LabelSettings_thdc6"]
font_size = 38

[node name="prog_93a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lov5v")

[node name="lblOut" type="Label" parent="."]
layout_mode = 0
offset_left = 73.0
offset_top = 123.0
offset_right = 1065.0
offset_bottom = 451.0
label_settings = SubResource("LabelSettings_fq6xj")

[node name="lblKWH" type="Label" parent="."]
layout_mode = 0
offset_left = 57.0
offset_top = 40.0
offset_right = 356.0
offset_bottom = 93.0
text = "Enter KWH used"
label_settings = SubResource("LabelSettings_thdc6")

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 517.0
offset_right = 228.0
offset_bottom = 644.0
theme = ExtResource("2_5drw4")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 449.0
offset_top = 515.0
offset_right = 669.0
offset_bottom = 642.0
theme = ExtResource("2_5drw4")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 922.0
offset_top = 517.0
offset_right = 1142.0
offset_bottom = 644.0
theme = ExtResource("2_5drw4")
text = "Exit"

[node name="linKWH" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 358.0
offset_top = 28.0
offset_right = 707.0
offset_bottom = 106.0
theme = ExtResource("2_5drw4")

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
